--- a/webpack-dev-server/src/css/index.css
+++ b/webpack-dev-server/src/css/index.css
@@ -6,4 +6,19 @@ body {
   min-height: 100vh;
   font-size: 40px;
   font-family: Arial;
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  animation: 300ms latido infinite;
+}
+
+@keyframes latido {
+  0% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
